--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gipod"
   ],
   "author": "Haroen Viaene <hello@haroen.me>",
-  "license": "Apache",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Haroenv/gipod-to-geojson/issues"
   },
